--- a/stylesheets/Tako.medias.styl
+++ b/stylesheets/Tako.medias.styl
@@ -43,6 +43,7 @@
     height 100%
     top 0
     left 0
+    transform(translateX(0))
     z-index FULL_ASIDE_INDEX
     position static
     padding-right ASIDE_PADDING
