Improvements on small screens

--- a/stylesheets/TaKo.article.styl
+++ b/stylesheets/TaKo.article.styl
@@ -61,6 +61,7 @@ article
     position relative
     flexbox-order(1)
     flexbox-weight(0)
+    font-size 14px
     top 0
     left 0
     right 0
@@ -74,6 +75,7 @@ article
 
     & > h1
       font-weight bold
+      font-size 1.5em
       display inline-block
       position absolute
       text-align center
