--- a/stylesheets/Tako.medias.styl
+++ b/stylesheets/Tako.medias.styl
@@ -3,8 +3,10 @@
   [data-device="tablet"]
     display none!important
   header
-    & h1
-      font-size 17px
+    font-size 12px !important
+
+  article > nav
+    font-size 1em
 
 // Phone mode
 @media screen and (min-device-width : 320px) and (max-device-width : 768px)
