Notification title improvements

--- a/stylesheets/TaKo.notifications.styl
+++ b/stylesheets/TaKo.notifications.styl
@@ -205,16 +205,17 @@ div[data-element="notification"]
 
       & > header
         font-weight bold
-        font-size 1.3em
+        font-size 1.5em !important
 
         & > .icon
-          font-size 2em
+          font-size 36px
           display inline-block
           height 50px
           width 50px
           line-height 49px
           margin-left 10px
           margin-right 10px
+          text-align center
 
           & + span
             position relative
@@ -234,15 +235,15 @@ div[data-element="notification"]
         overflow hidden
 
         & .icon
-          font-size 5em
+          font-size 70px
           display block
           width 100px
           height 100px
           line-height 100px
-          text-align center
           margin-top .15em
           margin-left auto
           margin-right auto
+          text-align center
 
         & #notification_progress
           height 10px
@@ -280,9 +281,6 @@ div[data-element="notification"]
           margin-left auto
           margin-right auto
 
-      & > section
-        & .icon
-          line-height 96px
     &.progress
       & > section
         height 150px
