Added smaller screens

--- a/stylesheets/Tako.medias.styl
+++ b/stylesheets/Tako.medias.styl
@@ -1,5 +1,5 @@
 // Small phones
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px)
+@media only screen and (max-device-width : 480px)
   [data-device="tablet"]
     display none!important
   header
