Fixed footer buttons background

--- a/stylesheets/Tako.theme.styl
+++ b/stylesheets/Tako.theme.styl
@@ -78,7 +78,8 @@ footer
   background-color lighten(SECONDARY, 5%)!important
   color SECONDARY_TEXT !important
 
-  & button
+  & button, & .button
+    background-color lighten(SECONDARY, 5%)!important
     &:active, &:hover
       & .counter
         background-color SECONDARY
