--- a/stylesheets/constants.styl
+++ b/stylesheets/constants.styl
@@ -6,7 +6,7 @@ HEADER_HEIGHT                   = 50px
 ASIDE_WIDTH                     = 256px
 ASIDE_PADDING                   = 6px
 ASIDE_TRANSITION                = 276px
-ASIDE_TRANSITION_TIME           = 150ms
+ASIDE_TRANSITION_TIME           = 300ms
 
 SECTION_TRANSITION_TIME         = 300ms
 
@@ -43,8 +43,8 @@ PULL_PADDING                    = 5px
 PULL_BORDER                     = 3px
 
 /* Z-INDEXES */
-ARTICLE_INDEX                   = 99
-SECTION_INDEX                   = 100
+ARTICLE_INDEX_OUT               = 99
+ARTICLE_INDEX_ACTIVE            = 100
 HEADER_INDEX                    = 101
 FOOTER_INDEX                    = 101
 HEADER_H1_INDEX                 = 102
