--- a/stylesheets/Tako.animations.styl
+++ b/stylesheets/Tako.animations.styl
@@ -1,7 +1,6 @@
-
-article
+article, section
   transform-origin 100% 100%
-  vendor(animation-duration, 1000ms)
+  vendor(animation-duration, 500ms)
   vendor(animation-timing-function, cubic-bezier(0.465, 0.330, 0.440, 0.950))
   vendor(transform, translate3d(0,0,0))
 
@@ -13,9 +12,9 @@ article
     &:not([data-direction])
       &:not(.active)
         opacity 0
-    &[data-direction="out"]
+    &[data-direction="out"], &[data-direction="back-out"]
       vendor(animation-name, fade_out)
-    &[data-direction="in"]
+    &[data-direction="in"], &[data-direction="back-in"]
       vendor(animation-name, fade_in)
     &.active
       opacity 1
