--- a/stylesheets/Tako.animations.styl
+++ b/stylesheets/Tako.animations.styl
@@ -46,6 +46,7 @@ article, section
 
   // Animation ROOM
   &[data-animation="room"]
+    vendor(animation-duration, 1000ms)
     &[data-direction="in"]
       vendor(animation-name, room_in)
       vendor(transform-origin, 0 50%)
@@ -61,6 +62,7 @@ article, section
 
   // Animation CUBE
   &[data-animation="cube"]
+    vendor(animation-duration, 1000ms)
     &[data-direction="in"]
       vendor(animation-name, cube_in)
       vendor(transform-origin, 0 50%)
@@ -116,30 +118,30 @@ article, section
 // Keyframes COVER
 @keyframes cover_in
   0%
-    vendor(transform, translateY(100%))
+    vendor(transform, translate(0, 100%))
   100%
-    vendor(transform, translateY(0))
+    vendor(transform, translate(0, 0))
 
 @keyframes cover_out
   0%
-    vendor(transform, translateY(0))
+    vendor(transform, translate(0, 0))
   100%
-    vendor(transform, translateY(0) translateZ(-100px) rotateX(5deg))
+    vendor(transform, translate(0, 0))
 
 @keyframes cover_back_in
   0%
-    vendor(transform, translateY(0) translateZ(-100px) rotateX(5deg))
+    vendor(transform, translate(0, -100%))
   100%
-    vendor(transform, translateY(0))
+    vendor(transform, translate(0, 0))
 
 @keyframes cover_back_out
   0%
-    vendor(transform, translateY(0))
+    vendor(transform, translate(0, 0))
   100%
-    vendor(transform, translateY(100%))
+    vendor(transform, translate(0, 0))
 
 
-DEFAULT_DEGREES = 55deg
+DEFAULT_DEGREES = 85deg
 
 // Keyframes ROOM
 @keyframes room_in
