--- a/stylesheets/Tako.medias.styl
+++ b/stylesheets/Tako.medias.styl
@@ -71,7 +71,7 @@
     height 100%
 
   article.active
-    position static
+    position relative
     flexbox-weight(1)
     flexbox-order(2)
     height 100%
