--- a/stylesheets/Tako.article.styl
+++ b/stylesheets/Tako.article.styl
@@ -128,6 +128,12 @@ footer
   box-align stretch
   transition-duration SECTION_TRANSITION_TIME
 
+  &.bottom
+    position absolute
+    bottom 0
+    left 0
+    right 0
+
   & nav
     margin 0
     flexbox-weight(1)
@@ -158,7 +164,6 @@ footer
 section
   position relative
   width 100%
-  display none
   margin 0
   overflow-x hidden
   overflow-y scroll
