--- a/stylesheets/Tako.animations.styl
+++ b/stylesheets/Tako.animations.styl
@@ -4,7 +4,7 @@ ARTICLE_ANIMATION3D_TIME = 1000ms
 SECTION_ZERO_TIME        = 1ms
 SECTION_ANIMATION2D_TIME = 1500ms
 SECTION_ANIMATION3D_TIME = 1000ms
-article
+body > article
   transform-origin 100% 100%
   animation-duration ARTICLE_ANIMATION2D_TIME
   vendor(animation-timing-function, cubic-bezier(0.465, 0.330, 0.440, 0.950))
@@ -81,7 +81,7 @@ article
       animation-name cube_back_out
       transform-origin 0 50%
 
-section
+body > article > section
   transform-origin 100% 100%
   vendor(animation-duration, SECTION_ANIMATION2D_TIME)
   // vendor(animation-timing-function, cubic-bezier(0.465, 0.330, 0.440, 0.950))
@@ -182,13 +182,13 @@ section
 //SPECIFIC CASES
 
 body[data-version="2.3"]
-  & article
+  & > article
     &[data-animation="room"], &[data-animation="cube"]
       animation-duration ARTICLE_ANIMATION2D_TIME
-  & section
-    &[data-animation="room"], &[data-animation="cube"]
-      animation-duration SECTION_ANIMATION2D_TIME
-  & article, & section
+    & > section
+      &[data-animation="room"], &[data-animation="cube"]
+        animation-duration SECTION_ANIMATION2D_TIME
+  & > article, & > article > section
     &[data-animation="room"], &[data-animation="cube"]
       animation-duration SECTION_ANIMATION2D_TIME
       &[data-direction="in"]
@@ -201,7 +201,7 @@ body[data-version="2.3"]
         animation-name slide_back_out
 
 @media screen and (min-device-width : 768px) and (orientation : landscape)
-  section
+  body > article > section
     &[data-animation=slide], &[data-animation=room], &[data-animation=cube]
       animation-duration SECTION_ANIMATION2D_TIME
       &:not([data-direction])
