Improved indented section

--- a/stylesheets/Tako.base.styl
+++ b/stylesheets/Tako.base.styl
@@ -21,8 +21,8 @@ body, html
   & *
     -webkit-tap-highlight-color rgba(0,0,0,0)
 
-.indented > *
-  padding INDENT
+// .indented > *
+//   padding INDENT
 
 .wide
   width 100%!important
