--- a/stylesheets/Tako.article.styl
+++ b/stylesheets/Tako.article.styl
@@ -185,10 +185,11 @@ section
   &.active
     display block
 
-  &.indented > div:not(.pulltorefresh)
-    width 100%
+  &.indented
+    padding 10px 0
+    margin 0 INDENT
     box-sizing(border-box)
-    height 100%
+    width auto
 
 header > h1 > img + span
   position relative
