--- a/stylesheets/Tako.pullrefresh.styl
+++ b/stylesheets/Tako.pullrefresh.styl
@@ -49,6 +49,6 @@ div.pulltorefresh
 .pulling > div
   position static!important
 
-section.indented > div.pulltorefresh
-  top - (INITIAL_POS + 10)
-  // transform(translate(0,- (INITIAL_POS + 10)))
+// section.indented > div.pulltorefresh
+//   top - (INITIAL_POS + 10)
+//   transform(translate(0,- (INITIAL_POS + 10)))
