--- a/stylesheets/Tako.notifications.styl
+++ b/stylesheets/Tako.notifications.styl
@@ -31,6 +31,7 @@ div[data-element="notification"]
     margin-left auto
     margin-right auto
     max-width 350px
+    max-height 90%
     width 90%
     opacity 0
     height auto
@@ -97,7 +98,7 @@ div[data-element="notification"]
       text-align center
       flexbox-weight(0)
       position relative
-      top -10%
+      // top -10%
 
     &.confirm
 
